--- a/automl.ipynb
+++ b/automl.ipynb
@@ -59,7 +59,7 @@
     "config = ModelConfig(development_config='config.yaml')\n",
     "\n",
     "# A little python sugar syntax\n",
-    "class DotDict(dict):\n",
+    "class DotDict(config):\n",
     "    def __getattr__(self, name):\n",
     "        value = self[name]\n",
     "        if isinstance(value, dict):\n",
