update structure to DABs

--- a/src/1_download.ipynb
+++ b/src/1_download.ipynb
@@ -103,8 +103,8 @@
    },
    "outputs": [],
    "source": [
-    "from src.utils import DotConfig\n",
-    "from src.download import DatasetDownloader\n",
+    "from hydrate.utils import DotConfig\n",
+    "from hydrate.download import DatasetDownloader\n",
     "config = DotConfig(config_path)"
    ]
   },
@@ -167,21 +167,21 @@
       "label": null,
       "name": "config_path",
       "options": {
-       "widgetDisplayType": "Text",
-       "validationRegex": null
+       "validationRegex": null,
+       "widgetDisplayType": "Text"
       },
       "parameterDataType": "String"
      },
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "config.yaml",
       "label": null,
       "name": "config_path",
       "options": {
-       "widgetType": "text",
        "autoCreated": false,
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
@@ -192,7 +192,8 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
