--- a/src/2_process.ipynb
+++ b/src/2_process.ipynb
@@ -27,8 +27,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.process import read_nested_parquet_files"
+    "from hydrate.process import read_nested_parquet_files"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "293afede",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
