--- a/src/5_agentify.ipynb
+++ b/src/5_agentify.ipynb
@@ -75,12 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0238e122",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.utils import DotConfig\n",
+    "from hydrate.utils import DotConfig\n",
     "config = DotConfig('config.yaml')"
    ]
   },
