--- a/src/3_train.ipynb
+++ b/src/3_train.ipynb
@@ -5,7 +5,48 @@
    "id": "ddf2ea9d",
    "metadata": {},
    "source": [
-    "# Train"
+    "# Train\n",
+    "\n",
+    "This notebook trains a lightgbm model on the 3W dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2968a5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "be06d027",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/scott.mckean/Repos/hydrate_prediction/.venv/lib/python3.12/site-packages/tsfresh/__init__.py:12: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lightgbm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtsfresh\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlightgbm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlgb\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'lightgbm'"
+     ]
+    }
+   ],
+   "source": [
+    "import tsfresh\n",
+    "import lightgbm as lgb"
    ]
   },
   {
@@ -33,21 +74,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "053e94a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_info = {\n",
+    "    1: {\"tag\": \"P-PDG\", \"name\": \"Pressure at the PDG\", \"unit\": \"Pa\"},\n",
+    "    2: {\"tag\": \"P-TPT\", \"name\": \"Pressure at the TPT\", \"unit\": \"Pa\"},\n",
+    "    3: {\"tag\": \"T-TPT\", \"name\": \"Temperature at the TPT\", \"unit\": \"degC\"},\n",
+    "    4: {\"tag\": \"P-MON-CKP\", \"name\": \"Pressure upstream of the PCK\", \"unit\": \"Pa\"},\n",
+    "    5: {\"tag\": \"T-JUS-CKP\", \"name\": \"Temperature downstream of the PCK\", \"unit\": \"degC\"},\n",
+    "    6: {\"tag\": \"P-JUS-CKGL\", \"name\": \"Pressure downstream of the GLCK\", \"unit\": \"Pa\"},\n",
+    "    7: {\"tag\": \"QGL\", \"name\": \"Gas lift flow rate\", \"unit\": \"sm^3/s\"}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbf5ab04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[tags + ['state']].dropna()\n",
+    "X_df = df[tags]\n",
+    "y_df = df['state']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "548eaff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "indices = ['timestamp', 'well_number']\n",
-    "\n",
-    "vars = [\n",
-    "    'P-PDG',\n",
-    "    'P-TPT',\n",
-    "    'T-TPT',\n",
-    "    'P-MON-CKP',\n",
-    "    'T-JUS-CKP',\n",
-    "    'QGL'\n",
-    "    ]\n",
-    "\n",
+    "tags = [x['tag'] for x in tag_info.values()]\n",
     "target = ['state']\n",
     "\n",
     "x_df = (\n",
