work on notebooks

--- a/src/1_download.ipynb
+++ b/src/1_download.ipynb
@@ -59,12 +59,12 @@
    },
    "outputs": [],
    "source": [
-    "%sh uv pip install ."
+    "%sh uv pip install ../."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -80,29 +80,8 @@
    },
    "outputs": [],
    "source": [
-    "from hydrate.utils import get_config_path\n",
-    "config_path = get_config_path()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "9e07aeb1-441c-4477-9947-be193b4add64",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from hydrate.utils import DotConfig\n",
+    "from hydrate.utils import get_config_path, DotConfig\n",
+    "config_path = get_config_path()\n",
     "config = DotConfig(config_path)"
    ]
   },
