--- a/src/4_deploy.ipynb
+++ b/src/4_deploy.ipynb
@@ -5,7 +5,78 @@
    "id": "9af00a9b",
    "metadata": {},
    "source": [
-    "Here we can declare a parameterized function that queries the model for a specific well and time range"
+    "# Deploy\n",
+    "\n",
+    "This notebook takes our trained models, deploys them as serving endpoints, and sets functions for a proper query."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59359e7d",
+   "metadata": {},
+   "source": [
+    "## ML Model Deployment\n",
+    "We use MLflow's deploy client to simplify endpoint deployments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1780c56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlflow.deployments import get_deploy_client\n",
+    "\n",
+    "client = get_deploy_client(\"databricks\")\n",
+    "endpoint = client.create_endpoint(\n",
+    "    name=\"shm_3w_xgboost\",\n",
+    "    config={\n",
+    "        \"served_entities\": [\n",
+    "            {\n",
+    "                \"name\": \"xgboost\", \n",
+    "                \"entity_name\": \"shm.3w.well_1\",\n",
+    "                \"entity_version\": \"2\",\n",
+    "                \"workload_size\": \"Small\",\n",
+    "                \"scale_to_zero_enabled\": True\n",
+    "            }\n",
+    "        ],\n",
+    "        \"traffic_config\": {\n",
+    "            \"routes\": [\n",
+    "                {\n",
+    "                    \"served_model_name\": \"xgboost\",\n",
+    "                    \"traffic_percentage\": 100\n",
+    "                }\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2ffa2be",
+   "metadata": {},
+   "source": [
+    "We can test our deployed model now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e480df5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9a2337c",
+   "metadata": {},
+   "source": [
+    "# Prediction Tool\n",
+    "\n",
+    "Let's declare a parameterized function that queries the model for a specific well and time range."
    ]
   },
   {
@@ -45,8 +116,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
